# tellopy

./: CMakeLists.txt  MANIFEST.in  README.md  main.c  main_windows.c  setup.py  telloc.h  telloc_unix.c  telloc_windows.c  video.c  video.h
tellopy/: __init__.py
